--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://harshmeghani47:1G15QTaqyXlEzslw@namasteharsh.popfo95.mongodb.net/music-app
 JWT_SECRET=music-player-secret
 PORT=5000
-FRONTEND_URL=https://music-player-frontend-git-main-harsh472000s-projects.vercel.app
+FRONTEND_URL=http://3.110.167.205:5000
