--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://harshmeghani47:1G15QTaqyXlEzslw@namasteharsh.popfo95.mon
 JWT_SECRET=music-player-secret
 PORT=5000
 FRONTEND_URL=http://3.110.167.205:5000
+FRONTEND_S_URL=https://music-player-frontend-psi.vercel.app
