fix: env changes

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_URI=mongodb+srv://harshmeghani47:1G15QTaqyXlEzslw@namasteharsh.popfo95.mongodb.net/music-app
 JWT_SECRET=music-player-secret
 PORT=5000
-FRONTEND_URL=http://3.110.167.205:5000
+# FRONTEND_URL=http://3.110.167.205:5000
+FRONTEND_URL=https://music-player-backend-peach.vercel.app
 FRONTEND_S_URL=https://music-player-frontend-psi.vercel.app
